Сделал statistic-card миксом блока и элемента

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="statistic-cards">
-        <div class="statistic-card">
+        <div class="statistic-card statistic-cards__statistic-card">
             <img src="/assets/images/statistic-card-image-1.png"
                  alt=""
                  class="statistic-card__image"/>
@@ -28,7 +28,7 @@
                 <p class="statistic-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </div>
-        <div class="statistic-card">
+        <div class="statistic-card statistic-cards__statistic-card">
             <img src="/assets/images/statistic-card-image-2.png"
                  alt=""
                  class="statistic-card__image"/>
@@ -37,7 +37,7 @@
                 <p class="statistic-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </div>
-        <div class="statistic-card">
+        <div class="statistic-card statistic-cards__statistic-card">
             <img src="/assets/images/statistic-card-image-3.png"
                  alt=""
                  class="statistic-card__image"/>
