Вёрстка готова, осталось максимум стили разнести и упорядочить ресурсы в assets

--- a/index.html
+++ b/index.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="assets/styles/reset-styles.css">
-    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/fonts.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
 </head>
 <body>
 
 <div class="boba-vibe-landing">
     <div class="first-screen">
-        <h1 class="first-screen__title">Boba vibe</h1>
-        <p class="first-screen__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper
-        </p>
-        <button class="first-screen__browse-menu-button">Browse menu</button>
+        <div class="content-area first-screen__content-area">
+            <img src="/assets/images/boba-tea-illustration.png"
+                 alt=""
+                 class="first-screen__tea-illustration">
+            <h1 class="first-screen__title">Boba vibe</h1>
+            <p class="first-screen__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper
+            </p>
+            <button class="first-screen__browse-menu-button">Browse menu</button>
+        </div>
+        <div class="image-area first-screen__image_area">
+            <img src="/assets/images/image-area-background.png"
+                 alt=""
+                 class="image-area__background">
+            <img src="/assets/images/image-area-background-wing-left.png"
+                 alt=""
+                 class="image-area__left-wing">
+            <img src="/assets/images/image-area-background-wing-right.png"
+                 alt=""
+                 class="image-area__right-wing">
+            <img src="/assets/images/image-area-bubble-tea.png"
+                 alt=""
+                 class="image-area__bubble-tea-image">
+            <img src="/assets/images/image-area-bubble-tea-leaf-image.png"
+                 alt=""
+                 class="image-area__leaf-image">
+        </div>
     </div>
 
     <div class="statistic-cards">
