--- a/index.html
+++ b/index.html
@@ -3,46 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="assets/styles/reset-styles.css">
-    <link rel="stylesheet" type="text/css" href="assets/styles/fonts.css">
-    <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/reset-styles.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/fonts.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/styles.css">
 </head>
 <body>
 
 <div class="boba-vibe-landing">
     <div class="first-screen">
-        <div class="content-area first-screen__content-area">
-            <img src="/assets/images/boba-tea-illustration.png"
+        <div class="first-screen__content-area">
+            <img src="./assets/images/boba-tea-illustration.png"
                  alt=""
                  class="first-screen__tea-illustration">
-            <h1 class="first-screen__title">Boba vibe</h1>
-            <p class="first-screen__text">
+            <h1 class="title">Boba vibe</h1>
+            <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper
             </p>
             <button class="first-screen__browse-menu-button">Browse menu</button>
         </div>
-        <div class="image-area first-screen__image_area">
-            <img src="/assets/images/image-area-background.png"
-                 alt=""
-                 class="image-area__background">
-            <img src="/assets/images/image-area-background-wing-left.png"
-                 alt=""
-                 class="image-area__left-wing">
-            <img src="/assets/images/image-area-background-wing-right.png"
-                 alt=""
-                 class="image-area__right-wing">
-            <img src="/assets/images/image-area-bubble-tea.png"
-                 alt=""
-                 class="image-area__bubble-tea-image">
-            <img src="/assets/images/image-area-bubble-tea-leaf-image.png"
-                 alt=""
-                 class="image-area__leaf-image">
+        <div class="first-screen__image_area">
+            <img src="./assets/images/image-area-background.png"
+                 alt="">
         </div>
     </div>
 
     <div class="statistic-cards">
         <div class="statistic-card">
-            <img src="/assets/images/statistic-card-image-1.png"
+            <img src="./assets/images/statistic-card-image-1.png"
                  alt=""
                  class="statistic-card__image"/>
             <div class="statistic-card__text-block">
@@ -51,7 +38,7 @@
             </div>
         </div>
         <div class="statistic-card">
-            <img src="/assets/images/statistic-card-image-2.png"
+            <img src="./assets/images/statistic-card-image-2.png"
                  alt=""
                  class="statistic-card__image"/>
             <div class="statistic-card__text-block">
@@ -60,7 +47,7 @@
             </div>
         </div>
         <div class="statistic-card">
-            <img src="/assets/images/statistic-card-image-3.png"
+            <img src="./assets/images/statistic-card-image-3.png"
                  alt=""
                  class="statistic-card__image"/>
             <div class="statistic-card__text-block">
